Added tests and upgraded entity relationships

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ logging.level.reactor.netty.http.client=DEBUG
 
 externalservice.financeAccountBaseUrl=${FINANCE_ACCOUNT_URL:http://localhost:8081/accounts/}
 externalservice.financeInvoicesBaseUrl=${FINANCE_INVOICES_URL:http://localhost:8081/invoices/}
+externalservice.libraryBaseUrl=${LIBRARY_URL:http://localhost:8091/api/}
